Adding number_reader to gitignore list

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ timertesting.py
 math.py
 .vscode/settings.json
 .vscode/launch.json
+Chapter 10 ( Files and Exceptions )/Examples/number_reader.py
