adding remember_me.py to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ math.py
 .vscode/settings.json
 .vscode/launch.json
 Chapter 10 ( Files and Exceptions )/Examples/number_reader.py
+Chapter 10 ( Files and Exceptions )/Examples/remember_me.py
