adding username.json to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ math.py
 .vscode/launch.json
 Chapter 10 ( Files and Exceptions )/Examples/number_reader.py
 Chapter 10 ( Files and Exceptions )/Examples/remember_me.py
+Chapter 10 ( Files and Exceptions )/Examples/username.json
