Adding multiple exercise files and readded chapter 10 examples to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,19 @@ Chapter 9 ( Classes )/Examples/electric_car2.py
 Chapter 9 ( Classes )/Examples/my_car.py
 Chapter 9 ( Classes )/Examples/my_cars.py
 Chapter 9 ( Classes )/Examples/my_electric_car.py
+Chapter 10 ( Files and Exceptions )/Examples/write_message.py
+Chapter 10 ( Files and Exceptions )/Examples/file_reader.py
+Chapter 10 ( Files and Exceptions )/Examples/pi_million_digits.txt
+Chapter 10 ( Files and Exceptions )/Examples/pi_string.py
+Chapter 10 ( Files and Exceptions )/Examples/pi_digits.txt
+Chapter 10 ( Files and Exceptions )/Examples/number_reader.py
+Chapter 10 ( Files and Exceptions )/Examples/programming.txt
+Chapter 10 ( Files and Exceptions )/Examples/alice.py
+Chapter 10 ( Files and Exceptions )/Examples/alice.txt
+Chapter 10 ( Files and Exceptions )/Examples/division_calculator.py
+Chapter 10 ( Files and Exceptions )/Examples/greet_user.py
+Chapter 10 ( Files and Exceptions )/Examples/number_writer.py
+Chapter 10 ( Files and Exceptions )/Examples/numbers.json
+Chapter 10 ( Files and Exceptions )/Examples/remember_me.py
+Chapter 10 ( Files and Exceptions )/Examples/username.json
+
